--- a/www/subdom/member/css/album.preview.css
+++ b/www/subdom/member/css/album.preview.css
@@ -1,10 +1,11 @@
-#albumList {margin: 0px; padding: 0px; list-style-type: none;}
+#albumList {margin: 0; padding: 0; list-style-type: none;}
 #albumList li.row {display: block; list-style-type: none;}
 #albumList li.row a.round {display: block; text-decoration: none;}
 #albumList li.row a:hover h3 {text-decoration: underline;}
 .photoList {display: block; overflow: hidden; white-space: nowrap; list-style-type: none; padding: 0;}
-.photoList li {margin: 3px 3px 3px 0; padding: 1px; float: left; width: 150px; height: 100px; font-size: 4em;
+.photoList li {margin: 3px 3px 3px 0; padding: 1px; width: 150px; height: 100px;
     text-align: center; font-size: 1em; float: none; display: inline;}
 .photoList li a {display: block;}
 .photoList li img {border: 1px solid gray; width: 150px; height: 100px;}
 .photoList li a:hover img, .photoList li a:active img, .photoList li a:focus img {border-color: #ea9419;}
+#album .popis {font-size: 90%}
