--- a/www/subdom/photo/css/mobile.css
+++ b/www/subdom/photo/css/mobile.css
@@ -1,5 +1,5 @@
 #header img {display: none;}
-#header h1 {left: 0px}
+#header h1 {left: 0}
 #header h1 span {display: none;}
 #header h1:before, #header h1:after {display: none;}
 #slides {display: none;}
