--- a/www/subdom/member/css/rating.css
+++ b/www/subdom/member/css/rating.css
@@ -1,5 +1,5 @@
 #frm-rating-ratingForm-message { width: 100%; min-height: auto; background: none; font-family: sans-serif;
-    font-size: 90%; border-color: #ccc; }
+    font-size: 90%; border-color: gray; }
 #ratings { font-size: 90%; }
 .stars { color: #885500; font-size: larger; }
 
