Remove unnesesary css file

--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{$basePath}/css/rating.css" type="text/css" n:if="$akceIsOld">
 <link rel="stylesheet" href="{$basePath}/css/album.preview.css" type="text/css" n:if="$akce->album_id">
 <link rel="stylesheet" href="{$basePath}/css/anketa.css" type="text/css" n:if="$akce->anketa_id">
-<link rel="stylesheet" href="{$basePath}/css/forum.css" type="text/css" n:if="$akce->forum_topic_id">
+{*<link rel="stylesheet" href="{$basePath}/css/forum.css" type="text/css" n:if="$akce->forum_topic_id">*}
 <link rel="stylesheet" href="{$basePath}/css/forum.posts.css" type="text/css" n:if="$akce->forum_topic_id">
 
 <style type="text/css" n:syntax="off">
