--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -141,8 +141,10 @@ a.head {background-color: #12397e; font-size: 2ex; border: 1px solid black;
 
 #text a.noLink {text-decoration: none; color: inherit;}
 
-.headerLike { background-color: #0089d2; color: white; text-align: left; border-radius: 0 0 15px 15px; 
-	padding: 0.1em 0.5em; font-size: 1.1em; font-weight: bold;
+#text hr {border-color: gray}
+
+.headerLike {background-color: #0089d2; color: white; border-radius: 0 0 15px 15px;
+	padding: 0.1em 0.5em; font-size: 1.1em;
 	background-image: -moz-linear-gradient(#0089d2,#60afe4);  
 	background-image: -webkit-linear-gradient(#0089d2,#60afe4); 
 	background-image: linear-gradient(#0089d2,#60afe4); 
