--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -170,4 +170,4 @@ a.head {background-color: #12397e; font-size: 2ex; border: 1px solid black;
 	background-image: linear-gradient(#12397e,#60afe4);
 }
 
-#text .headerLike a {color: inherit; text-decoration: none;}
+#text .headerLike a {color: inherit; }
