--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -87,7 +87,7 @@ $(function () {
 
 		<td class="col author right">
 			<div class="no-wrap">
-                <a title="profil uživatele" n:href="Nember:view $topic->member_id">
+                <a title="profil uživatele" n:href="Member:view $topic->member_id">
 					<span class="icon-user-o"><span> {$topic->member->surname} {$topic->member->name}
 				</a>
 			</div>
