in-line navigation ccs class also present in component ccs file

--- a/www/subdom/member/css/forum.posts.css
+++ b/www/subdom/member/css/forum.posts.css
@@ -16,3 +16,6 @@
 .message h1 {font-size: 16px;}
 .message h2 {font-size: 14px;}
 .message h3 {font-size: 12px;}
+
+.inline-nav {list-style-type: none; padding: 0; margin-bottom: 1ex;}
+.inline-nav li {display: inline;}
