Change e-mail subject prefix to "[VZS Jablonec]" in all e-mail templates

--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -1,5 +1,5 @@
 {contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS_info] Nová akce čeká na Vaše schválení'}
+{var $mail->subject = '[VZS Jablonec] Nová akce čeká na Vaše schválení'}
 Na web byla přidána následující akce:
 
 {$akce->name}
