--- a/app/MemberModule/templates/Mail/forgotPassword.latte
+++ b/app/MemberModule/templates/Mail/forgotPassword.latte
@@ -1,5 +1,5 @@
 {contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS_info] Nové heslo'}
+{var $mail->subject = '[VZS Jablonec] Nové heslo'}
 Zdravím
 
 Ze stránek VZS MS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
