--- a/app/MemberModule/templates/Mail/newHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newHlasovani.latte
@@ -1,5 +1,5 @@
 {contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS_info] Soubor s výledky hlasování byl aktualizován'}
+{var $mail->subject = '[VZS Jablonec] Soubor s výledky hlasování byl aktualizován'}
 Zdravím
 
 Dnes {$datum|date:'%d.%m.%Y'} v {$datum|date:'H:i'} byl na náš web nahrán aktualizováný soubor s hlasováním představentstva.
