--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,5 +1,5 @@
 ﻿{contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS_info] Vítejte v informačním systému VZS Jablonec nad Nisou'}
+{var $mail->subject = '[VZS Jablonec] Vítejte v informačním systému VZS Jablonec nad Nisou'}
 Zdravím
 
 Právě si byl zaregistrován do systému Místní skupiny VZS Jablonec nad Nisou. 
