--- a/app/MemberModule/templates/Mail/newWebHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newWebHlasovani.latte
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>[VZS_info] Nové hlasování představenstva</title>
+    <title>[VZS Jablonec] Nové hlasování představenstva</title>
 </head>
 <body>
 <p>Zdravím</p>
