--- a/app/MemberModule/templates/Mail/newZapis.latte
+++ b/app/MemberModule/templates/Mail/newZapis.latte
@@ -1,5 +1,5 @@
 {contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS_info] Nový zápis ze schůze'}
+{var $mail->subject = '[VZS Jablonec] Nový zápis ze schůze'}
 Zdarvím
 
 Na náš web byla přidána nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}
