--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,5 +1,5 @@
 {contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS_info] Obnova hesla'}
+{var $mail->subject = '[VZS Jablonec] Obnova hesla'}
 Zdravím
 
 Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
