Move time of sesson expiration before date

--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -6,7 +6,7 @@ Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
 
 Nové si můžete nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
 
-Tento odkaz bude fungovat do {$date_end|date:'d.m.Y H:i:s'}
+Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}
 
 -----------------------------------------------------------------------
 Tato zpráva byla generována automaticky a není potřeba na ní odpovídat. 
