Fixed css for editor better syntax recognition

--- a/app/MemberModule/templates/Hlasovani.default.latte
+++ b/app/MemberModule/templates/Hlasovani.default.latte
@@ -1,13 +1,13 @@
 {block #head}
 <style type="text/css" n:syntax="off">
-.headerLike {margin: 0px; padding: 0px 1em 0.5ex 1em; display: inline-block;} 
-.borderLike {border-left: none; border-right: none; border-bottom: none;}
+.headerLike { margin: 0; padding: 0 1em 0.5ex 1em; display: inline-block;}
+.borderLike { border-left: none; border-right: none; border-bottom: none;}
 
-table#items td, table th {vertical-align: top; padding: 1ex 1ex;}
-table#items {border-collapse: collapse; width: 98%; }
-table#items td.col {padding: 0px;}
-table#items .right .headerLike {font-style: italic; text-align: center;}
-table#items .first {font-size: 1.1em;}
+table#items td, table th { vertical-align: top; padding: 1ex 1ex;}
+table#items { border-collapse: collapse; width: 98%; }
+table#items td.col { padding: 0;}
+table#items .right .headerLike { font-style: italic; text-align: center;}
+table#items .first { font-size: 1.1em;}
 
 </style>
 
