Added css in line class to control css file

--- a/www/subdom/member/css/forum.posts.css
+++ b/www/subdom/member/css/forum.posts.css
@@ -22,3 +22,6 @@ a.buttonLike:hover .lock {visibility: hidden;}
 
 table#posts .forum_post {max-width: 45em; padding-left: 1ex}
 .inline-nav li {font-size: inherit;}
+
+.inline-nav {list-style-type: none; padding: 0; margin-bottom: 1ex;}
+.inline-nav li {display: inline; font-size: 2ex;}
