New rating warning link point to raiting hashtag

--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -57,7 +57,7 @@ Naposledy jste byl přihlášen: <b>{$lastDate|date:'%A %d.%m.%Y %H:%M'}</b>.</p
 
 {if}<h3>Hodnocení akce</h3>
 <ol class="news" n:inner-foreach="$ratingList as $rating">
-	<li><a n:class="$rating->rating_member_id == $user->getId() ? logged" n:href="Akce:view#rating $rating->id"
+	<li><a n:class="$rating->rating_member_id == $user->getId() ? logged" n:href="Akce:view#rating-$rating->rating_member_id $rating->id"
 	title="{$rating->rating_date_add|timeAgoInWords}">{$rating->name}</a></li>
 </ol>
 {/if isset($rating)}
