Fixed css for editor better syntax recognition

--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -1,16 +1,16 @@
 {block #head}
 <link rel="alternate" title="VZS Jablonec Member Akce" n:href="//Feed:akce" type="application/rss+xml">
 <style type="text/css" n:syntax="off">
-#text {padding-top: 0px;}
+#text { padding-top: 0; }
 
-.borderLike table {width: 100%; border-collapse: collapse;}
-.borderLike table th, .borderLike table td {padding: 0px; vertical-align: top;}
-.borderLike {border-radius: 15px; padding: 0px 1em 0.5ex 1em; margin-bottom: 1em; overflow: hidden;}
+.borderLike table { width: 100%; border-collapse: collapse; }
+.borderLike table th, .borderLike table td { padding: 0; vertical-align: top; }
+.borderLike { border-radius: 15px; padding: 0 1em 0.5ex 1em; margin-bottom: 1em; overflow: hidden; }
 
-table .headerLike th {vertical-align: middle; padding: 0.1em 0.5em; font-size: 1.1em;}
-table .headerLike .right {font-style: italic; font-size: 1em;}
+table .headerLike th { vertical-align: middle; padding: 0.1em 0.5em; font-size: 1.1em;}
+table .headerLike .right { font-style: italic; font-size: 1em; }
 
-table .first td {padding-top: 0.5ex;}
+table .first td { padding-top: 0.5ex; }
 </style>
 {/block}
 
