Removed price field from event form

--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -64,7 +64,9 @@ uvidí ji na webu pouze její organizatoři. Dokončením tohoto formuláře se 
 <p>{label album_id /}{input album_id}</p>
 
 <p>{label file class => 'hint', title => 'Nahraje nový soubor a přepíše starý' /}{input file} 
- <span class="no-wrap">{label price class => 'hint', title => 'Pokud nevíte přesně, nechte prázné' /}{input price}</span></p>
+
+ {*<span class="no-wrap">{label price class => 'hint', title => 'Pokud nevíte přesně, nechte prázné' /}{input price}</span>*}
+</p>
 
 <p>{label perex class => 'hint', title => 'Tento text bude viditelný pro veřejnost'/}</p>
 <p>{input perex}</p>
