--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -99,7 +99,10 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 <p>
 <a n:href="Feed:akce" class="buttonLike float_right"><span class="icon-rss char"></span> RSS Akce</a>
 
-{if $all}<a class="buttonLike" n:href="Akce:default, false"><span class="icon-ok"></span> Zobrazit jen akce z letošního roku</a>
-{else}<a class="buttonLike" n:href="Akce:default, TRUE"><span class="icon-ok char"></span> Zobrazit všechny akce</a>{/if}
+{if $all}
+	<a class="buttonLike" n:href="Akce:default, false"><span class="icon-ok"></span> Zobrazit jen akce z letošního roku</a>
+{else}
+	<a class="buttonLike" n:href="Akce:default, TRUE"><span class="icon-ok char"></span> Zobrazit všechny akce</a>
+{/if}
 </p>
 {/block}
