Add DateTimeInput form element for all time values on Event form

--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -47,8 +47,8 @@ uvidí ji na webu pouze její organizatoři. Dokončením tohoto formuláře se 
 
 <p>{label name /}{input name} <span class="no-wrap">{label place /}{input place}</span></p>
 
-<p>{label date_start /}{input date_start} {input time_start}  
-<span class="no-wrap">{label date_end /}{input date_end} {input time_end}</span></p>
+<p>{label date_start /}{input date_start}
+<span class="no-wrap">{label date_end /}{input date_end}</span></p>
 
 <p id="deatline">{label date_deatline class => "hint", title => "Použije se pouze v případě, že bude povoleno přihlašování" /}
 {input date_deatline}</p>
